--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div data-index="9" class="tile"></div>
       <div id="strike" class="strike"></div>
     </div>
-    <div id="game-over-area" class="hidden">
-      <h2 id="game-over-text">Winner is X</h2>
+    <div id="game-over-box" class="hidden">
+      <h2 id="game-over-message">Winner is X</h2>
       <button id="play-again">Play Again</button>
     </div>
     <script src="index.js"></script>
